<resources>
    <string name="app_name">G-Price</string>
    <string name="usuario">Usuario</string>
    <string name="clave">Clave</string>
    <string name="botonIniciar">Iniciar sesión</string>
    <string name="email">Correo</string>
    <string name="cuenta">Cuenta</string>
    <string name="Requisitos">1 Número \n1 Letra minúscula \n1 Letra mayúscula \n1 Caracter especial \n8 Caracteres mínimo \nSin espacios</string>
    <string name="menu_inicio">Inicio</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="nick">Nick</string>
    <string name="menu_actualizar">Actualizar</string>
    <string name="menu_favoritas">Favoritas</string>
    <string name="menu_buscador">Buscador</string>
    <string name="title_activity_maps">Map</string>
    <string name="menu_ajustes">Ajustes</string>
    <string name="iniciar">Iniciar</string>
    <string name="registrar">Registrar</string>
    <string name="buscar">Buscar</string>
    <string name="introduce_municipio">Introduce municipio</string>
    <string name="municipio">Municipio</string>
    <string name="idioma">Idioma</string>
    <string name="idiomaAplicacion">Idioma de la aplicacion</string>
    <string name="indicarIdiomaAplicacion">Indicar idioma de la aplicación</string>
    <string name="cambiar_correo">Cambiar correo</string>
    <string name="introducir_correo">Introduzca el nuevo correo</string>
    <string name="nuevo_correo">Nuevo correo</string>
    <string name="cambiar_pass">Cambiar contraseña</string>
    <string name="introducir_pass">Introduzca la nueva contraseña</string>
    <string name="nuevo_pass">Nueva contraseña</string>
    <string name="cambiar_nick">Cambiar nick</string>
    <string name="introducir_nick">Introduzca el nuevo nick</string>
    <string name="nuevo_nick">Nuevo nick</string>
    <string name="ningun_municipio">No se encontró ningún municipio con ese nombre</string>
    <string name="no_disponible">No disponible</string>
    <string name="datos_actualizados">Datos actualizados a fecha</string>
    <string name="gasolina_95">Gasolina 95</string>
    <string name="gasoleo_a">Gasoleo A</string>
    <string name="gasolina_98">Gasolina 98</string>
    <string name="gasoleo_p">Gasoleo P</string>
    <string name="provincia">Provincia</string>
    <string name="codigo_postal">Código Postal</string>
    <string name="horario">Horario</string>
    <string name="anadir_favorito">AÑADIR FAVORITO</string>
    <string name="eliminar_favorito">ELIMINAR FAVORITO</string>
    <string name="ir_a_mapa">Ir a mapa</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="aceptar">Aceptar</string>
    <string name="confirmacion">Se le ha enviado un correo electrónico de confirmación</string>
    <string name="usuario_existe">Ya existe un usuario con ese email</string>
    <string name="email_incorrecto">Debes introducir correctamente el correo</string>
    <string name="clave_incorrecta">Debes introducir correctamente la clave</string>
    <string name="usuario_incorrecto">Usuario incorrecto</string>
    <string name="fallo_registro">Fallo registro</string>
    <string name="email_cambiado">El correo se ha cambiado correctamente</string>
    <string name="pass_cambiado">La contraseña se ha cambiado correctamente</string>
    <string name="sin_favoritos">No hay gasolineras en favoritos</string>
    <string name="ultima_actualizacion">Última actualización: </string>
    <string name="actualizacion_cancelada">Se ha cancelado la actualización</string>
    <string name="error_bd">Se ha producido un error al abrir la base de datos</string>
    <string name="ultima_busqueda">Última búsqueda: </string>
    <string name="sin_municipios">No se pudieron obtener municipios</string>
    <string name="sin_gasolineras">No se pudieron obtener gasolineras</string>
    <string name="location_permission_denied">Permiso denegado</string>
    <string name="permission_required_toast">Permiso requerido</string>
    <string name="permission_rationale_location">Permiso de localización</string>
    <string name="gasolinera_cercana">Gasolinera más cercana</string>
    <string name="ubicacion_actual">Ubicación actual</string>
    <string name="menu_grafico">Gráfico</string>
    <string name="txtGrafico">Evolución del precio en la última semana</string>
</resources>